fix:banner visible

--- a/src/assets/css/index/database.less
+++ b/src/assets/css/index/database.less
@@ -1,3 +1,7 @@
+.m-database{
+    .mt(0);
+}
+
 .m-database-content {
     padding: 15px 15px 10px 15px;
 
